src/styles/StickyBoard.scss
@import "_globals.scss";

.page__board {
    padding: 20px;
    h1 {
        font-size: 72px;
        font-weight: 700;
    }
}

.sticky__board {
    position: relative;
    background-color: $CL_BACKGROUND;
    width: 100%;
    height: 90%;
    max-width: 100vw;
    border: 1px solid lighten($CL_BACKGROUND, 5);
    background-image: radial-gradient(lighten($CL_BACKGROUND, 10) 1px, transparent 0);
    background-size: 40px 40px;
    background-position: 0px 0px;
    border-radius: $GLOBAL_BORDER_RADIUS;
    //overflow: hidden;
    z-index: 0;
    .notes {
        height: 100%;
    }
    .action__menu {
        position: absolute;
        bottom: 0;
        left: 50%;
        transform: translateX(-50%);
        padding: 10px;
        z-index: 5;
        display: flex;
        gap: 10px;
        background-color: darken($CL_BACKGROUND, 2);
        border-top-left-radius: $GLOBAL_BORDER_RADIUS;
        border-top-right-radius: $GLOBAL_BORDER_RADIUS;
        border: 1px solid lighten($CL_BACKGROUND, 10);
        border-bottom: 0px !important;
        box-shadow:
            0 1px 1px rgba(0, 0, 0, 0.2),
            0 2px 0 0 rgba($CL_BACKGROUND, 0.7) inset;
        padding: 15px;
        button {
            border: none;
            color: $CL_TEXT;
            // background-color: lighten($CL_BACKGROUND, 5);
            // box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.372);
            // border: 1px solid lighten($CL_BACKGROUND, 10);
            font-size: 48px;
            padding: 5px 20px;
            cursor: pointer;
            border-radius: 100%;
            width: 70px;
            height: 70px;
            display: flex;
            justify-content: center;
            align-items: center;
        }
    }

    .background__tip {
        position: absolute;
        bottom: 15px;
        left: 15px;
        background-color: darken($CL_BACKGROUND, 2);
        border-radius: $GLOBAL_BORDER_RADIUS;
        border: 1px solid lighten($CL_BACKGROUND, 10);
        box-shadow:
            0 1px 1px rgba(0, 0, 0, 0.2),
            0 2px 0 0 rgba($CL_BACKGROUND, 0.7) inset;
        padding: 15px;
        z-index: -1;
    }
}

.sticky__note {
    background-color: $CL_PRIMARY;
    width: 250px;
    min-height: 100px;
    position: absolute;
    box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.372);
    transform: var(--initial-transform);
    //animation: fadeIn 0.4s ease-in-out;
    // border-radius: 5px;
    // overflow: hidden;
    .pin {
        position: absolute;
        top: -30px;
        left: 50%;
        filter: saturate(1);
        z-index: 1;
        width: 50px;
        transform: translateX(-50%);
        user-select: none;
    }
    .content {
        padding: 10px;
        //padding: 5px 10px;
        // line-height: 1.1em;
        font-size: 24px;
        // background:
        //   repeating-linear-gradient(to bottom,transparent 0 calc(1.4em - 1px), #8b835349 0 1.4em)
        //    0 0/100% calc(100% - 1em);
        // height: 100%;
        textarea {
            font-size: 24px;
            background-color: $CL_PRIMARY;
            outline: none;
            text-decoration: underline;
            text-decoration-color: #8b835349;
            border: none;
            width: 100%;
            max-width: 230px;
            height: inherit;
            resize: none;
        }
        span {
            font-size: 18px;
            color: #736b40e7;
            user-select: none;
        }
        p {
            //text-decoration: underline;
            //text-decoration-color: #8b835349;
            outline: none;
            white-space: pre-line;
            color: black;
            cursor: text;
        }
    }
    .dragger {
        background-color: darken($CL_PRIMARY, 10);
        height: 20px;
        width: 100%;
        cursor: grab;
    }
}

